tests/try/then_when.stderr
error: Only "and_then" is allowed inside "then" section
 --> tests/try/then_when.rs:8:17
  |
8 |                 'when_something: {
  |                 ^^^^^^^^^^^^^^^
